# themectl

./: Cargo.toml  README.md  default.nix  flake.nix  nixpkgs-package.nix
docs/: GENERATORS.md  NIX_INTEGRATION.md  THEME_FORMAT.md
docs/man/: themectl-apply.1  themectl-backups.1  themectl-config.1  themectl-export.1  themectl-variant.1  themectl.1
examples/: README.md  dracula.toml  minimal-dark.toml  nord-dark.toml  nord-light.toml  tokyo-night.toml
src/: cache.rs  cli.rs  config.rs  file_manager.rs  incremental.rs  lib.rs  main.rs  parser.rs  templates.rs  theme.rs  utils.rs
src/generators/: btop.rs  fastfetch.rs  git.rs  gtk.rs  hyprland.rs  hyprpaper.rs  kitty.rs  mako.rs  mod.rs  neovim.rs  nix.rs  starship.rs  waybar.rs  wlogout.rs  wofi.rs  yazi.rs
tests/: cli_integration_test.rs  generator_test.rs  parser_test.rs  theme_test.rs  utils_test.rs  validation_test.rs
tests/common/: mod.rs
themes/: default.toml
