[package]
name = "themectl"
version = "0.1.0"
edition = "2021"
authors = ["Huff Mullen <huffmakesthings@gmail.com>"]
description = "A unified theming solution for Frog-OS applications"
license = "GPL-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
regex = "1.10"
walkdir = "2.4"
dirs = "5.0"
rayon = "1.8"
dashmap = "5.5"
sha2 = "0.10"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
